--- a/rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/rest-api/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
             classpath:applicationContext-datasource.xml
             classpath:applicationContext-service.xml
             classpath:applicationContext-security.xml
-            classpath:applicationContext-ldap.xml
+            <!--classpath:applicationContext-ldap.xml-->
         </param-value>
     </context-param>
 
