add ldap mixed auth.

--- a/rest-api/src/main/resources/config-LOCAL.properties
+++ b/rest-api/src/main/resources/config-LOCAL.properties
@@ -2,7 +2,7 @@ ldap.url=ldap://ldap.mina.com:389
 ldap.base=dc=mina,dc=com
 ldap.username=cn=Manager,dc=mina,dc=com
 ldap.password=secret
-ldap.groups.search.filter=(&(objectclass=posixGroup)(memberUid={0}))
+ldap.groups.search.filter=(memberUid={0})
 
 jdbc.app.driver=com.mysql.jdbc.Driver
 jdbc.app.url=jdbc:mysql://mina.com:3306/test
