--- a/rest-api/src/main/resources/config-DEV.properties
+++ b/rest-api/src/main/resources/config-DEV.properties
@@ -2,4 +2,4 @@ ldap.url=ldap://ldap.mina.com:389
 ldap.base=dc=mina,dc=com
 ldap.username=cn=Manager,dc=mina,dc=com
 ldap.password=secret
-ldap.groups.search.filter=(&(objectclass=posixGroup)(memberUid={0}))
+ldap.groups.search.filter=(memberUid={0})
