Add email config

--- a/rest-api/src/main/resources/config-DEV.properties
+++ b/rest-api/src/main/resources/config-DEV.properties
@@ -3,3 +3,9 @@ ldap.base=dc=mina,dc=com
 ldap.username=cn=Manager,dc=mina,dc=com
 ldap.password=secret
 ldap.groups.search.filter=(memberUid={0})
+
+mail.host=smtp.mina.com
+mail.port=25
+mail.username=mina-noreply
+mail.password=Mina1234
+
