--- a/rest-api/src/main/resources/config-LOCAL.properties
+++ b/rest-api/src/main/resources/config-LOCAL.properties
@@ -14,4 +14,12 @@ jdbc.app.maxIdle=16
 jdbc.app.maxWaitMillis=7200000
 jdbc.app.validationQuery=SELECT 1
 
+mail.host=smtp.mina.com
+mail.port=25
+mail.username=mina-noreply
+mail.password=Mina1234
+
+
+
+
 
