--- a/rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/rest-api/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,7 @@
             classpath:applicationContext-security.xml
             classpath:applicationContext-ldap.xml
             classpath:applicationContext-web.xml
+            classpath:applicationContext-mail.xml
         </param-value>
     </context-param>
 
